welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:6: error: not found: value numd
    if (nums(i)==nums(i+1) && nums(i+1)==numd(i+2)){
                                         ^